# norminette-header-replace

./: README.md  install.sh  pyproject.toml
norminette-headers/: cli.py
norminette_headers_replace/: cli.py
