[project]
name = "norminette-header-replace"
version = "0.1.0"
description = "Batch-update 42-style headers with your name and realistic timestamps."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.scripts]
norminette-header-replace = "norminette-header-replace.cli:main"

[tool.setuptools]
packages = ["norminette-header-replace"]
